fix spacing

--- a/css/product-availability.css
+++ b/css/product-availability.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2px 6px;
+  padding: 4px 8px;
   border-radius: 40px;
   color: var(--Dark-Brown, #36080A);
   text-align: center;
